HSEARCH-5300 Address various eclipse compiler + Sonar issues